.provarCaches/00D5f000005vwGkEAI/objects/rstk__FSOINVH__c.object
<CustomObject>
    <description>FSOINVH__C Print Header containing aggregated data for an invoice</description>
    <fields>
        <fullName>rstk__acctinvoice__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Invoice Number (Accting Package)</inlineHelpText>
        <label>Invoice Number (Accting Pckg)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__companylogo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__conmethod__c</fullName>
        <inlineHelpText>This indicates the method to contact the Contact Person for this Sales Order Invoice. i)Email ii)Phone iii)Fax iv)Text to Email v)Text to Phone</inlineHelpText>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Text to Email</fullName>
                </value>
                <value>
                    <fullName>Text to Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__contact__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__country__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__currexchrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZ_OBSOLET_Invoice Currency Exchg Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__custno__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpo__c</fullName>
        <inlineHelpText>Customer Purchase order number</inlineHelpText>
        <label>Customer PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dateprinted__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__discamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Discount Amount</description>
        <inlineHelpText>Discount Amount - Customer Currency</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discamtcc__c</fullName>
        <formula>rstk__discamt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discpct__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Discount Percent</inlineHelpText>
        <label>Discount Pct</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__div__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__duedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__extcomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__finchgdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Finance Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__finchgpct__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Finance Charge Percent</inlineHelpText>
        <label>Finance Charge Pct</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Freight Amount - Customer Currency</description>
        <inlineHelpText>Freight Amount - Customer Currency</inlineHelpText>
        <label>Freight Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamtcc__c</fullName>
        <formula>rstk__freightamt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvh_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Invoice Header</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Print Invoice Headers</relationshipLabel>
        <relationshipName>Print_Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__grandtotal__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__grandtotal_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Grand Total - Customer Currency</description>
        <inlineHelpText>Grand Total - Customer Currency</inlineHelpText>
        <label>Grand Total - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__grandtotalcc__c</fullName>
        <formula>rstk__grandtotal__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Handling Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Handling Amount - Customer Currency</description>
        <inlineHelpText>Handling Amount - Customer Currency</inlineHelpText>
        <label>Handling Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamtcc__c</fullName>
        <formula>rstk__handlingamt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__invdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__invoiceno__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__numLines__c</fullName>
        <defaultValue>0</defaultValue>
        <label>numLines</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__order__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Packaging Amount - Customer Currency</description>
        <inlineHelpText>Packaging Amount - Customer Currency</inlineHelpText>
        <label>Packaging Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamtcc__c</fullName>
        <formula>rstk__packageamt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__paydiscdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Payment Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__paydiscpct__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Payment Discount Percent</inlineHelpText>
        <label>Payment Discount Pct</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__period__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Period</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__printcomment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Ext Comment on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoname__c</fullName>
        <inlineHelpText>Ship-To Name</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__staddress1__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__staddress2__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__staddress3__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stcity__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stcomments__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stcountry__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ststate__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stzip__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship-To Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taxamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tax Amount - Customer Currency</description>
        <inlineHelpText>Tax Amount - Customer Currency</inlineHelpText>
        <label>Tax Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxamtcc__c</fullName>
        <formula>rstk__taxamt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Exempt (Resale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taxloc__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taxovramt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Tax Override Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxovramt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Total Tax Override Amount - Customer Currency</description>
        <inlineHelpText>Total Tax Override Amount - Customer Currency</inlineHelpText>
        <label>Total Tax Override Amt - Cust Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxovramtcc__c</fullName>
        <formula>rstk__taxovramt__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxrate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__terms__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Amount (sum of Lines)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__total_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Total Amount (sum of Lines) - Customer Currency</description>
        <inlineHelpText>Total Amount (sum of Lines) - Customer Currency</inlineHelpText>
        <label>Total Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__totalcc__c</fullName>
        <formula>rstk__total__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__totalppya__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total of Prepayments Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__totalppya_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Total of Prepayments Applied - Customer Currency</description>
        <inlineHelpText>Total of Prepayments Applied - Customer Currency</inlineHelpText>
        <label>Total PPY Applied - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__totalppyacc__c</fullName>
        <formula>rstk__totalppya__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__tottaxable__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Taxable Total (sum of lines)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__tottaxable_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Taxable Total (sum of lines) - Customer Currency</description>
        <inlineHelpText>Taxable Total (sum of lines) - Customer Currency</inlineHelpText>
        <label>Taxable Total - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__tottaxablecc__c</fullName>
        <formula>rstk__tottaxable__c * rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Year</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill-To Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Print Invoice Header</label>
    <listViews>
        <fullName>rstk__Invoice_Header_Print</fullName>
        <columns>NAME</columns>
        <columns>rstk__custno__c</columns>
        <columns>rstk__order__c</columns>
        <columns>rstk__invoiceno__c</columns>
        <columns>rstk__invdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Invoice Header Print</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Print Invoice Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>